--- a/src/view/index.html
+++ b/src/view/index.html
@@ -27,6 +27,6 @@
   <body>
     <video id="remoteVideos" controls></video>
 
-    <script src="bundle.js"></script>
+    <script src="app.bundle.js"></script>
   </body>
 </html>
