--- a/src/view/vr.html
+++ b/src/view/vr.html
@@ -12,7 +12,7 @@
         <video id="remoteVideos"></video>
       </a-assets>
 
-      <a-video src="#remoteVideos"></a-video>
+      <a-video src="#remoteVideos" rotation="-90 0 0" width="3.5" height="2"></a-video>
 
       <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>
