--- a/src/view/vr.html
+++ b/src/view/vr.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="./aframe-master.js"></script>
-    <script src="./aframe-ar.min.js"></script>
+    <script src="/aframe-master.js"></script>
+    <script src="/aframe-ar.min.js"></script>
+    <script>
+      window.SOURCE = '<%- source %>';
+    </script>
   </head>
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
@@ -18,6 +21,6 @@
     </a-scene>
     
 
-    <script src="app.bundle.js"></script>
+    <script src="/app.bundle.js"></script>
   </body>
 </html>
